# PicoNetBoot

./: CMakeLists.txt  LICENSE  README.md
include/: instructions.h  lwipopts.h  mbedtls_config.h  pico_net_boot.h
include/style/: common_macros.h  pointer.h  status.h
src/: execute_instruction.c  execute_instructions.c  main.c  parse_instruction.c  socket_server.c
